--- a/src/components/saved/SavedList.css
+++ b/src/components/saved/SavedList.css
@@ -43,6 +43,11 @@
 .card-content {
   grid-column: 1/6;
   padding-left: 20px;
+  color: white;
+}
+
+.card-content h4{
+  color: gray;
 }
 
 .remove {
