--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,7 +6,7 @@
 
 html {
   height: 100%;
-  scroll-behavior: smooth
+  scroll-behavior: smooth;
 }
 
 body {
@@ -15,6 +15,7 @@ body {
   font-size: 16px;
   line-height: 1.7;
   min-height: 100%;
+  background: #f0f0f0;
 }
 
 .grid {
