--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,9 +5,7 @@
   border-color: black;
   width: 100%;
   height: 70px;
-  background-color: white;
-  -webkit-box-shadow: 0 8px 6px -6px #999;
-  -moz-box-shadow: 0 8px 6px -6px #999;
+  background-color: #FFBF00;
   box-shadow: 0 8px 6px -6px #999;
 }
 
@@ -15,6 +13,6 @@
   font-size: 30px;
   font-weight: 700;
   padding: 20px;
-  color: #FFBF00;
+  color: white;
 } 
 
